--- a/frontend/index.html
+++ b/frontend/index.html
@@ -958,6 +958,8 @@ Especialistas certificados. Atención estructurada y decisiones informadas.
         let descriptionCount = 2;
         let generatedRSAs = [];
         let currentMode = 'manual';
+        let sitelinkCount = 4;
+        let calloutCount = 4;
 
         // Initialize
         document.addEventListener('DOMContentLoaded', function() {
